Fixed margin issue on mobile.

--- a/app/assets/stylesheets/galleries.css.scss
+++ b/app/assets/stylesheets/galleries.css.scss
@@ -82,6 +82,7 @@
   @media (max-width: 768px) {
     & > a {
       width: 100%;
+      margin: 0;
     }
 
     &.fifty-percent > a {
